--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "npm run build && node dist/bundle.js"
+    "dev": "npx tsx watch src/index.ts"
   },
   "keywords": [],
   "author": "",
