--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start": "npm run build && node dist/bundle.js"
+    "build": "npx webpack --watch",
+    "start": "nodemon dist/bundle.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "webpack-cli": "^6.0.1"
   },
   "dependencies": {
-    "clean-webpack-plugin": "^4.0.0"
+    "clean-webpack-plugin": "^4.0.0",
+    "nodemon": "^3.1.9"
   }
 }
