--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/express": "^5.0.1",
     "express": "^5.1.0",
+    "prettier": "3.5.3",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
     "webpack": "^5.99.5",
@@ -22,5 +23,12 @@
   },
   "dependencies": {
     "clean-webpack-plugin": "^4.0.0"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": true,
+    "trailingComma": "all",
+    "tabWidth": 4,
+    "printWidth": 80
   }
 }
