--- a/package.json
+++ b/package.json
@@ -1,34 +1,47 @@
 {
-  "name": "learn_node",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "dev": "npx tsx watch src/index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
-  "devDependencies": {
-    "@types/express": "^5.0.1",
-    "express": "^5.1.0",
-    "prettier": "3.5.3",
-    "ts-loader": "^9.5.2",
-    "typescript": "^5.8.3",
-    "webpack": "^5.99.5",
-    "webpack-cli": "^6.0.1"
-  },
-  "dependencies": {
-    "clean-webpack-plugin": "^4.0.0"
-  },
-  "prettier": {
-    "singleQuote": true,
-    "semi": true,
-    "trailingComma": "all",
-    "tabWidth": 4,
-    "printWidth": 80
-  }
+    "name": "learn_node",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "npx webpack --config webpack.test.config.js && npx mocha dist/tests/bundle.test.js",
+        "build": "npx webpack -watch",
+        "start": "nodemon dist/bundle.js",
+        "dev": "npx tsx watch src/index.ts"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "type": "module",
+    "devDependencies": {
+        "@types/chai": "^5.2.1",
+        "@types/express": "^5.0.1",
+        "@types/jest": "^29.5.14",
+        "@types/mocha": "^10.0.10",
+        "@types/supertest": "^6.0.3",
+        "chai": "^5.2.0",
+        "prettier": "3.5.3",
+        "jest": "^29.7.0",
+        "mocha": "^11.1.0",
+        "ts-jest": "^29.3.2",
+        "ts-loader": "^9.5.2",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.8.3",
+        "webpack": "^5.99.5",
+        "webpack-cli": "^6.0.1",
+        "nodemon": "^3.1.9",
+        "supertest": "^7.1.0",
+        "webpack-merge": "^6.0.1",
+        "clean-webpack-plugin": "^4.0.0"
+    },
+    "dependencies": {
+        "express": "^5.1.0"
+    },
+    "prettier": {
+        "singleQuote": true,
+        "semi": true,
+        "trailingComma": "all",
+        "tabWidth": 4,
+        "printWidth": 80
+    }
 }
