--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "npx webpack --config webpack.test.config.js && npx mocha dist/tests/bundle.test.js",
         "build": "npx webpack",
-        "dev": "npx tsx watch src/index.ts"
+        "dev": "npx tsx watch src/server.ts"
     },
     "keywords": [],
     "author": "",
