refactor: removed start script to avoid adding/removing --watch flag for webpack between running github actions and local development

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "npx webpack --config webpack.test.config.js && npx mocha dist/tests/bundle.test.js",
-        "build": "npx webpack -watch",
-        "start": "nodemon dist/bundle.js",
+        "build": "npx webpack",
         "dev": "npx tsx watch src/index.ts"
     },
     "keywords": [],
