--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "webpack-merge": "^6.0.1"
     },
     "dependencies": {
+        "@types/apicache": "^1.6.7",
+        "apicache": "^1.6.3",
         "express": "^5.1.0"
     },
     "prettier": {
