--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/express": "^5.0.1",
         "@types/jest": "^29.5.14",
         "@types/mocha": "^10.0.10",
+        "@types/node": "^22.15.3",
         "@types/supertest": "^6.0.3",
         "chai": "^5.2.0",
         "clean-webpack-plugin": "^4.0.0",
@@ -34,7 +35,9 @@
         "webpack-merge": "^6.0.1"
     },
     "dependencies": {
-        "express": "^5.1.0"
+        "express": "^5.1.0",
+        "sqlite": "^5.1.1",
+        "sqlite3": "^5.1.7"
     },
     "prettier": {
         "singleQuote": true,
